feat(implement postman)

--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "task-aggregator",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "backend":"nodemon index.js" 
-    
+    "backend": "nodemon app.js"
   },
   "repository": {
     "type": "git",
