--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "backend":"nodemon index.js" 
+    "backend": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.6.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "react": "^18.2.0",
+    "react-app": "^1.1.2"
   }
 }
