--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.6.1",
-    "nodemon": "^2.0.20",
-    "react": "^18.2.0",
-    "react-app": "^1.1.2"
+    "nodemon": "^2.0.20"
   }
 }
