--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.10.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-app": "^1.1.2",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-pageflip": "^2.0.3",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "sass": "^1.54.9",
     "web-vitals": "^2.1.4"
